--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,23 +1,169 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-
-.heroBanner {
-  padding: 4rem 0;
-  text-align: center;
+.icon {
+  color: #121212;
+  height: 30px;
+  width: 30px;
+  margin-left: 10px;
+  vertical-align: middle;
   position: relative;
-  overflow: hidden;
+  top: -2px;
+  transition: color 0.3s ease;
 }
 
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
+.bannerButton {
+  background-color: #F2B81B;
+  color: white;
+  border: none;
+  padding: 20px 60px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 500;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 50px;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 10px var(--banner-text-shadow);
+}
+
+@media (max-width: 768px) {
+  .bannerButton {
+    padding: 15px 65px;
   }
+}
+
+@media (max-width: 320px) {
+  .bannerButton {
+    font-size: 16px;
+    padding: 15px 25px;
+  }
+}
+
+.bannerButton:hover {
+  background-color: var(--banner-button-hover);
+  color: var(--banner-button-text-hover);
+}
+
+.bannerButton:hover .icon {
+  color: var(--banner-button-text-hover);
 }
 
 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.forceColor {
+  color: var(--ifm-color-content-inverse);
+}
+
+html[data-theme="dark"] .forceColor {
+  color: var(--ifm-font-color-secondary);
+}
+
+.logo {
+  color: var(--banner-text);
+  padding-right: 10px;
+  padding-left: 10px;
+  height: 70px;
+  width: auto;
+  filter: drop-shadow(2px 2px 3px var(--banner-text-shadow));
+  vertical-align: middle; 
+  position: relative;
+  top: -6px; 
+}
+
+@media (max-width: 768px) {
+  .logo {
+  height: 40px;
+  width: auto;
+  top: -3px;
+  }
+}
+
+@media (max-width: 320px) {
+  .logo {
+    margin-top: 35px;
+    height: 35px;
+    width: auto;
+    top: -22px;
+  }
+}
+
+.title {
+  color: var(--banner-text);
+  font-size: 45px;
+  padding-bottom: 20px;
+  text-shadow: 2px 2px 3px var(--banner-text-shadow);
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 320px) {
+  .title {
+    font-size: 20px;
+  }
+}
+
+.subtitle {
+  color: var(--banner-text);
+  font-size: 21px;
+  padding: 0 14rem 20px;
+  text-shadow: 2px 2px 3px var(--banner-text-shadow);
+}
+
+@media (max-width: 1000px) {
+  .subtitle {
+    font-size: 18px;
+    padding: 0 0 20px;
+    padding: 0;
+  }
+}
+
+@media (max-width: 320px) {
+  .subtitle {
+    font-size: 15px;
+    padding: 0 0 20px;
+    padding: 0;
+  }
+}
+
+@media (max-height: 850px) {
+  .subtitle {
+    font-size: 18px;
+  }
+}
+
+.heroBanner {
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: 25% 50%;
+  height: 70vh;
+}
+
+.introductionBlock {
+  background-color: var(--banner-background);
+  padding: 6rem;
+  text-align: center;
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .introductionBlock {
+    padding: 2rem;
+    background-position: 70vw -5vh;
+    background-size: 120% auto;
+  }
+}
+
+@media (max-width: 320px) {
+  .introductionBlock {
+    padding: 0;
+  }
 }
